Fixing test builds