@@ -42,14 +42,14 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.5'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 
 	// hibernate validator et toutes ses dépendances nécessaires pour valider les contraintes sur les beans
-	
- 	implementation("com.google.guava:guava:33.3.0-jre")	
+
+ 	implementation("com.google.guava:guava:33.3.0-jre")
 	runtimeOnly('com.h2database:h2')
 	
 }
@@ -61,5 +61,6 @@ dependencyManagement {
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+	useJUnitPlatform();
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
